SCRD-5073 - fix vertical scrollbar issue introduced with bs4

--- a/src/styles/components/wizard.less
+++ b/src/styles/components/wizard.less
@@ -136,6 +136,7 @@
 .footer-container {
   margin: 10px;
   margin-right: 0px;
+  margin-bottom: 8px;
   height: 35px;
   float: right;
 }
